todo-project/manifests/deployment-backend-linkered-annotated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: todo-backend
    spec:
      containers:
      - env:
        - name: REDIS_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: password
              name: redis-config
        - name: NATS_URL
          value: nats://my-nats:4222
        image: PROJECT/IMAGE_BACKEND
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3001
          initialDelaySeconds: 20
          periodSeconds: 5
        name: todo-backend
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3001
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
---
