todo-project/manifests/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      #serviceAccountName: todoksa
      containers:
        - name: todo-backend
          image: PROJECT/IMAGE_BACKEND
          resources:
            limits:
              cpu: "200m"
              memory: "100Mi"
        - name: cloud-sql-proxy
          # It is recommended to use the latest version of the Cloud SQL proxy
          # Make sure to update on a regular schedule!
          image: gcr.io/cloudsql-docker/gce-proxy:1.17
          command:
            - "/cloud_sql_proxy"
            - "-instances=todo-instance=tcp:5432"
            - "-credential_file=/secrets/service_account.json"
          securityContext:
            # The default Cloud SQL proxy image runs as the
            # "nonroot" user and group (uid: 65532) by default.
            runAsNonRoot: true 
          volumeMounts:
          - name: sa-secret-volume
            mountPath: /secrets/
            readOnly: true
      volumes:
      - name: sa-secret-volume
        secret:
          secretName: sasecret
