todo-project/manifests/deployment-broadcaster-linkered-annotated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster-dep
spec:
  replicas: 6
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: broadcaster
    spec:
      containers:
      - env:
        - name: NATS_URL
          value: nats://my-nats:4222
        image: PROJECT/IMAGE_BROADCASTER
        name: broadcaster
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
---
