todo-project/manifests/deployment-broadcaster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster-dep
spec:
  replicas: 6
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      labels:
        app: broadcaster
    spec:
      containers:
        - name: broadcaster
          image: PROJECT/IMAGE_BROADCASTER
          resources:
            limits:
              cpu: "200m"
              memory: "100Mi"
