todo-project/manifests/deployment-linkered-annotated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: todo
    spec:
      containers:
      - image: PROJECT/IMAGE_FRONTEND
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 5
        name: todo-frontend
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
        volumeMounts:
        - mountPath: /usr/src/app/files
          name: shared-image
      volumes:
      - emptyDir: {}
        name: shared-image
---
