todo-project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes: 
        - name: shared-image
          emptyDir: {}
      containers:
        - name: todo
          image: amadeuspham/kubernetes-todo:exercise112
          imagePullPolicy: "Always"
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
