todo-project/manifests/rollout-backend.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  strategy:
    canary:
      steps:
      - analysis:
          templates:
          - templateName: cpu-rate
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      #serviceAccountName: todoksa
      containers:
        - name: todo-backend
          image: PROJECT/IMAGE_BACKEND
          resources:
            limits:
              cpu: "200m"
              memory: "100Mi"
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 3001
          livenessProbe:
            initialDelaySeconds: 20 # Initial delay until the liveness is tested
            periodSeconds: 5 # How often to test
            httpGet:
               path: /healthz
               port: 3001
        # - name: cloud-sql-proxy
        #   # It is recommended to use the latest version of the Cloud SQL proxy
        #   # Make sure to update on a regular schedule!
        #   image: gcr.io/cloudsql-docker/gce-proxy:1.17
        #   command:
        #     - "/cloud_sql_proxy"
        #     - "-instances=dwk-gke-309210:europe-north1:todo-instance=tcp:5432"
        #     - "-credential_file=/secrets/service_account.json"
        #   securityContext:
        #     # The default Cloud SQL proxy image runs as the
        #     # "nonroot" user and group (uid: 65532) by default.
        #     runAsNonRoot: true 
        #   volumeMounts:
        #   - name: sa-secret-volume
        #     mountPath: /secrets/
        #     readOnly: true
      # volumes:
      # - name: sa-secret-volume
      #   secret:
      #     secretName: sasecret
