todo-project/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todo-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  strategy:
    canary:
      steps:
      - analysis:
          templates:
          - templateName: cpu-rate
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes: 
        - name: shared-image
          emptyDir: {}
      containers:
        - name: todo-frontend
          image: PROJECT/IMAGE_FRONTEND
          imagePullPolicy: "Always"
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
          resources:
            limits:
              cpu: "200m"
              memory: "100Mi"
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 3000
          livenessProbe:
            initialDelaySeconds: 20 # Initial delay until the liveness is tested
            periodSeconds: 5 # How often to test
            httpGet:
               path: /healthz
               port: 3000
