todo-project/manifests/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  labels:
    app: node-redis
spec:
  ports:
  - port: 6379
    name: web
  clusterIP: None
  selector:
    app: node-redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: redis-svc
  selector:
    matchLabels:
      app: node-redis
  template:
    metadata:
      labels:
        app: node-redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        command:
        - redis-server
        - "/redis-master/redis.conf"
        ports:
        - containerPort: 6379
        # data volume where redis writes data
        volumeMounts:
        - name: data
          mountPath: /data
          readOnly: false
        - mountPath: /redis-master
          name: config
      volumes:
        - name: config
          configMap:
            name: redis-config
            items:
            - key: redis-config
              path: redis.conf
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
