todo-project/manifests/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  type: NodePort
  selector:
    app: todo-backend
  ports:
    - port: 3457
      protocol: TCP
      targetPort: 3001
