todo-project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
spec:
  type: LoadBalancer
  selector:
    app: todo
  ports:
    - port: 3456
      protocol: TCP
      targetPort: 3000
