todo-project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: todo-ingress
  # annotations:
  #   traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: todo-svc
          servicePort: 3456
      - path: /api/*
        backend:
          serviceName: todo-backend-svc
          servicePort: 3457
